--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Programeiros/nostalgic-backend#readme",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "prettier": "^2.6.2"
   }
