--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "nostalgic-express",
   "version": "1.0.0",
   "description": "Nostalgic API",
-  "main": "index.js",
+  "main": "src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon src/app.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
+    "nodemon": "^2.0.16",
     "prettier": "^2.6.2"
   }
 }
