--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.0.0",
     "ejs": "^3.1.7",
     "express": "^4.18.1",
+    "express-formidable": "^1.2.0",
     "multer": "^1.4.4",
     "nodemon": "^2.0.16",
     "prettier": "^2.6.2",
