--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
   "homepage": "https://github.com/Programeiros/nostalgic-backend#readme",
   "dependencies": {
     "body-parser": "^1.20.0",
-    "dotenv": "^16.0.0",
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.7",
     "express": "^4.18.1",
     "express-formidable": "^1.2.0",
     "multer": "^1.4.4",
     "nodemon": "^2.0.16",
+    "pg": "^8.7.3",
     "prettier": "^2.6.2",
+    "request": "^2.88.2",
+    "sequelize": "^6.19.0",
     "sharp": "^0.30.4",
     "uuid": "^8.3.2"
   }
